# wikidata-bot-framework

./: .gitignore  .pre-commit-config.yaml  .prettierrc.mjs  CHANGELOG.md  Pipfile  README.md  README.rst  package-lock.json  package.json  pyproject.toml  pywikibot-RPI2026F1Bot.lwp  user-config-sample.py  user-config.py
.github/: dependabot.yml
.github/workflows/: auto-update.yml  codeql-analysis.yml  docs.yml  format-prettier.yml  format.yml  lint.yml  publish.yml  test.yml  type-lint.yml
docs/: conf.py  extra_property.rst  index.rst  other.rst  property_adder_bot.rst  quickstart.rst
docs/api/: config.rst  property-adder-bot.rst
docs/high-level/: basic.md  processing-pipeline.md  quickstart.py  quickstart.rst
tests/: __init__.py  comparisons_test.py  conftest.py  cycle_prevent_test.py  entity_url_to_entity_id_test.py  matching_test.py  resolve_multiple_property_claims_test.py  simple_test.py  test_simple.py
wikidata_bot_framework/: __init__.py  __version__.py  constants.py  dataclasses.py  process_reason.py  sentry.py  transformers.py  utils.py
