[project]
name = "wikidata-bot-framework"
version = "8.0.0"
description = "A framework for making Wikidata bots."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Version Control :: Git",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Topic :: Documentation :: Sphinx",
]
dependencies = [
    "pywikibot==11.1.0",
    "mwparserfromhell==0.7.2",
    "python-dotenv==1.2.2",
    "sentry-sdk==2.55.0",
    "typing-extensions==4.15.0",
]

[project.urls]
repository = "https://github.com/PythonCoderAS/wikidata-bot-framework"

[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
docs = [
    "sphinx==9.1.0",
    "furo==2025.12.19",
    "sphinxext-opengraph==0.13.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-lint==1.0.2",
    "myst_parser==5.0.0"
]
test = [
    "pytest==9.0.2",
    "pytest-timeout==2.4.0",
    "pytest-cov==7.0.0",
]
lint = [
    "ruff==0.15.6",
    "mypy==1.19.1",
]
types = [
    "types-requests==2.32.4.20260107"
]
dev = [
    "poethepoet>=0.42.1",
    "pre-commit==4.5.1",
]

[tool.uv]
package = false
default-groups = "all"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["wikidata_bot_framework*"]

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.ruff.lint.isort]
combine-as-imports = true
order-by-type = true

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
exclude = ["user-config.py", "user-password.py"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pywikibot", "pywikibot.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --color=yes --cov=wikidata_bot_framework --cov-report=lcov"

[tool.poe.tasks]
test = "pytest"
lint = "ruff check . --fix"
lint-ci = "ruff check ."
format = "ruff format ."
format-ci = "ruff format . --check"
typelint = "mypy ."
docs-lint = "sphinx-lint docs"

[tool.pyright]
exclude = ["user-password.py", "setup.py", ".venv", "node_modules", "dist", "build", "__pycache__"]
