[project]
name = "wikidata-bot-framework"
version = "9.0.0"
description = "A framework for making Wikidata bots."
requires-python = ">=3.12"
readme = "README.rst"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Version Control :: Git",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Topic :: Documentation :: Sphinx",
]
dependencies = [
    "pywikibot==11.1.0",
    "mwparserfromhell==0.7.2",
    "python-dotenv==1.2.2",
    "sentry-sdk==2.55.0",
    "typing-extensions==4.15.0",
]

[project.urls]
repository = "https://github.com/PythonCoderAS/wikidata-bot-framework"

[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
docs = [
    "sphinx==9.1.0",
    "furo==2025.12.19",
    "sphinxext-opengraph==0.13.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-lint==1.0.2",
    "myst_parser==5.0.0"
]
test = [
    "pytest==9.0.2",
    "pytest-timeout==2.4.0",
    "pytest-cov==7.0.0",
]
lint = [
    "ruff==0.15.7",
    "mypy==1.19.1",
]
types = [
    "types-requests==2.32.4.20260107"
]
dev = [
    "poethepoet>=0.42.1",
    "pre-commit==4.5.1",
]

[tool.uv]
package = false
default-groups = "all"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["wikidata_bot_framework*"]

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.ruff.lint.isort]
combine-as-imports = true
order-by-type = true

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
exclude = ["user-config.py", "user-password.py", "setup.py", ".venv", "node_modules", "dist", "build", "__pycache__"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pywikibot", "pywikibot.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --color=yes --cov=wikidata_bot_framework --cov-report=lcov"


[tool.poe.tasks.test]
help = "Run simulated tests with pytest."
cmd = "pytest --simulate"

[tool.poe.tasks.test-integration]
help = "Run real tests with pytest (no simulate)."
cmd = "pytest"

[tool.poe.tasks.lint]
help = "Run ruff to lint and fix code."
cmd = "ruff check . --fix"

[tool.poe.tasks.lint-ci]
help = "Run ruff to lint code without fixing (for CI)."
cmd = "ruff check ."

[tool.poe.tasks.format]
help = "Run ruff to format code."
cmd = "ruff format ."

[tool.poe.tasks.format-ci]
help = "Run ruff to check code formatting without making changes (for CI)."
cmd = "ruff format . --check"

[tool.poe.tasks.typelint]
help = "Run mypy to check type annotations."
cmd = "mypy ."

[tool.poe.tasks.docs-lint]
help = "Run sphinx-lint to check documentation."
cmd = "sphinx-lint docs"

[tool.poe.tasks.all-lint]
help = "Run all linting tasks (code and docs)."
cmd = "sh -c 'poe lint && poe format && poe typelint && poe docs-lint'"

[tool.poe.tasks.all-lint-ci]
help = "Run all linting tasks (code and docs) without fixing (for CI)."
cmd = "sh -c 'poe lint-ci && poe format-ci && poe typelint && poe docs-lint'"

[tool.poe.tasks.all]
help = "Run all tasks (lint, format, typelint, docs-lint, test)."
cmd = "sh -c 'poe all-lint && poe test'"

[tool.poe.tasks.all-integration]
help = "Run all tasks (including real tests) (lint, format, typelint, docs-lint, test-integration)."
cmd = "sh -c 'poe all-lint && poe test-integration'"

[tool.poe.tasks.all-ci]
help = "Run all CI tasks (lint, format, typelint, docs-lint, test)."
cmd = "sh -c 'poe all-lint-ci && poe test'"

[tool.pyright]
exclude = ["user-password.py", "setup.py", ".venv", "node_modules", "dist", "build", "__pycache__"]

[tool.semantic_release]
version_variables = ["wikidata_bot_framework/__version__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]

upload_to_pypi = false # We will handle this in the workflow
upload_to_release = true
build_command = "sh -c 'return 0'" # We will build the package in the workflow, so we don't want semantic-release to do it automatically

[tool.semantic_release.changelog]
# Recommended patterns for conventional commits parser that is scope aware
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]
